<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <!--
        LinearLayout буду менять на ConstraintLayout, но пока рабираюсь с этим
    -->

    <LinearLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/location_img"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/location"
                android:src="@drawable/location_icon" />

            <TextView
                android:id="@+id/location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:text="@string/cityname" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <ImageView
                android:id="@+id/calendar_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/calendar"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:src="@drawable/calendar_icon" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/weather"
                android:src="@drawable/sun_cloudy_icon" />

            <TextView
                android:id="@+id/weather_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/cloudy"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/_24_c"
                android:textSize="68sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/windy_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/windy"
                    android:paddingStart="60dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/windy_icon" />

                <TextView
                    android:id="@+id/windy_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_5"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/water_icon"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/water"
                    android:paddingStart="75dp"
                    android:paddingEnd="0dp"
                    android:src="@drawable/water_icon" />

                <TextView
                    android:id="@+id/water_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/_47"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tomorrow_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/mon_19_sep"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/after_tomorrow_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/tue_20_sep"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/after_tomorrow_2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/wed_21_sep"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tomorrow_weather"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/tomorrow"
                    android:src="@drawable/rain_icon" />

                <ImageView
                    android:id="@+id/after_tomorrow_weather"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/after_tomorrow"
                    android:src="@drawable/snow_icon" />

                <ImageView
                    android:id="@+id/after_tomorrow_2_weather"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/after_tomorrow2"
                    android:src="@drawable/sun_icon" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loadingBackground"
        android:visibility="gone"
        tools:visibility="visible">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</FrameLayout>